--- a/AbsenceMonitor/SchoolAbsenceMonitorUI/Reports.xaml
+++ b/AbsenceMonitor/SchoolAbsenceMonitorUI/Reports.xaml
@@ -152,18 +152,18 @@
                        FontWeight="Bold"
                        Foreground="Red"
                        Visibility="Hidden"/>
-
+                <!-- Menu items all using the same click item at the moment -->
                 <Menu Name="Menu_ClassSelector" AllowDrop="True" Width="200" Grid.Row="1" HorizontalAlignment="Left">
                     <MenuItem Header="Select Class" FontFamily="Calibri" FontSize="14" FontWeight="Bold">
-                        <MenuItem Header="Junior Infants" Name="menuItem_Junior"/>
-                        <MenuItem Header="Seniior Infants" Name="menuItem_Senior"/>
-                        <MenuItem Header="Ist Class" Name="menuItem_First"/>
-                        <MenuItem Header="2nd Class" Name="menuItem_Second"/>
-                        <MenuItem Header="3rd Class" Name="menuItem_Third"/>
-                        <MenuItem Header="4th Class" Name="menuItem_Fourth"/>
-                        <MenuItem Header="5th Class" Name="menuItem_Fifth"/>
-                        <MenuItem Header="6th Class" Name="menuItem_Sixth"/>
-                        <MenuItem Header="Special Educational Needs" Name="menuItem_Special"/>
+                        <MenuItem Header="Junior Infants" Name="menuItem_Junior" Click="menuItem_Special_Click"/>
+                        <MenuItem Header="Seniior Infants" Name="menuItem_Senior" Click="menuItem_Special_Click"/>
+                        <MenuItem Header="Ist Class" Name="menuItem_First" Click="menuItem_Special_Click"/>
+                        <MenuItem Header="2nd Class" Name="menuItem_Second" Click="menuItem_Special_Click"/>
+                        <MenuItem Header="3rd Class" Name="menuItem_Third" Click="menuItem_Special_Click"/>
+                        <MenuItem Header="4th Class" Name="menuItem_Fourth" Click="menuItem_Special_Click"/>
+                        <MenuItem Header="5th Class" Name="menuItem_Fifth" Click="menuItem_Special_Click"/>
+                        <MenuItem Header="6th Class" Name="menuItem_Sixth" Click="menuItem_Special_Click"/>
+                        <MenuItem Header="Special Educational Needs" Name="menuItem_Special" Click="menuItem_Special_Click"/>
                     </MenuItem>
                 </Menu>
             </Grid>
@@ -186,6 +186,52 @@
                        Foreground="Red"
                        Visibility="Hidden"/>
                 <ListView Name="LstVClassAbsence" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Top" ScrollViewer.VerticalScrollBarVisibility="Auto">
+                    <ListView.View>
+                        <GridView>
+                            <GridViewColumn Header="Pupil Name" Width="250">
+                                <GridViewColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <TextBlock Grid.Row="1"  HorizontalAlignment="Stretch" TextWrapping="Wrap" Height="26"/>
+                                    </DataTemplate>
+                                </GridViewColumn.CellTemplate>
+                            </GridViewColumn>
+                            <GridViewColumn Header="Class" Width="150">
+                                <GridViewColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <TextBlock Grid.Row="1"  HorizontalAlignment="Stretch" TextWrapping="Wrap" Height="26"/>
+                                    </DataTemplate>
+                                </GridViewColumn.CellTemplate>
+                            </GridViewColumn>
+                            <GridViewColumn Header="Total Days Absence" Width="150">
+                                <GridViewColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <TextBlock Grid.Row="1"  HorizontalAlignment="Stretch" TextWrapping="Wrap" Height="26"/>
+                                    </DataTemplate>
+                                </GridViewColumn.CellTemplate>
+                            </GridViewColumn>
+                        </GridView>
+                    </ListView.View>
+                </ListView>
+            </Grid>
+        </StackPanel>
+
+        <!-- Stack Panel containing the Class absence report -->
+        <StackPanel Name="Stk_PupilReport" Visibility="Hidden" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" >
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="50*"/>
+                    <RowDefinition Height="50*"/>
+                </Grid.RowDefinitions>
+                <Label Content="Absence Report for Pupil Name" FontSize="14" Grid.Row="0" HorizontalAlignment="Left" Visibility="Visible"/>
+                <Label Name="LblPupilReportError" 
+                       Content="Error Creating the Pupil Report" 
+                       FontSize="14" 
+                       Grid.Row="0" 
+                       HorizontalAlignment="Left" 
+                       FontWeight="Bold"
+                       Foreground="Red"
+                       Visibility="Hidden"/>
+                <ListView Name="LstVPupilAbsence" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Top" ScrollViewer.VerticalScrollBarVisibility="Auto">
                     <ListView.View>
                         <GridView>
                             <GridViewColumn Header="Pupil Name" Width="250">
