Further updated layout changes, added navigation from the login page to the main dashboard - note this is only temporary.

--- a/AbsenceMonitor/SchoolAbsenceMonitorUI/MainWindow.xaml
+++ b/AbsenceMonitor/SchoolAbsenceMonitorUI/MainWindow.xaml
@@ -96,7 +96,7 @@
                                    FontWeight="Bold"
                                    Foreground="Red"
                                    Content="Invalid username or password"
-                                   Visibility="Visible"/>
+                                   Visibility="Hidden"/>
                           </Grid>
                     </StackPanel>                        
                     </Grid>
