--- a/AbsenceMonitor/SchoolAbsenceMonitorUI/ApplicationLogs.xaml
+++ b/AbsenceMonitor/SchoolAbsenceMonitorUI/ApplicationLogs.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:SchoolAbsenceMonitorUI"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="650" d:DesignWidth="1050"
       Title="ApplicationLogs">
 
     <Grid>
@@ -30,8 +30,7 @@
                     <RowDefinition Height="10*"/>
                     <RowDefinition Height="80*"/>
                     <RowDefinition Height="10*"/>
-                </Grid.RowDefinitions>
-                <Label Content="System Log Reports" FontSize="14" Grid.Row="0" HorizontalAlignment="Center" Visibility="Visible" Name="LblReportHeader"/>
+                </Grid.RowDefinitions>                
                 <Label Name="LblSystemLogError" 
                        Content="Unable to populate System Logs" 
                        FontSize="14" 
@@ -40,24 +39,24 @@
                        FontWeight="Bold"
                        Foreground="Red"
                        Visibility="Hidden"/>
-                <ListView Name="LstSystemEvents" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Top" Width="1000" ScrollViewer.VerticalScrollBarVisibility="Visible">
+                <ListView Name="LstSystemEvents" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Top" Width="800" ScrollViewer.VerticalScrollBarVisibility="Visible" Margin="10,10">
                     <ListView.View>
                         <GridView>
-                            <GridViewColumn Header="Date / Time" Width="200"  DisplayMemberBinding="{Binding DateTime}">
+                            <GridViewColumn Header="Date / Time" Width="150"  DisplayMemberBinding="{Binding DateTime}">
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate>
                                         <TextBlock Grid.Row="1"  HorizontalAlignment="Center"  TextWrapping="Wrap" Height="26"/>
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
-                            <GridViewColumn Header="System Event" Width="550"  DisplayMemberBinding="{Binding SystemEvent}">
+                            <GridViewColumn Header="System Event" Width="450"  DisplayMemberBinding="{Binding SystemEvent}">
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate>
                                         <TextBlock Grid.Row="1"  HorizontalAlignment="Center" TextWrapping="Wrap" Height="26"/>
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
-                            <GridViewColumn Header="UserName" Width="250"  DisplayMemberBinding="{Binding UserName}">
+                            <GridViewColumn Header="UserName" Width="150"  DisplayMemberBinding="{Binding UserName}">
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate>
                                         <TextBlock Grid.Row="1"  HorizontalAlignment="Center" TextWrapping="Wrap" Height="26"/>
@@ -73,13 +72,13 @@
                             <RowDefinition Height="auto"/>
                         </Grid.RowDefinitions>
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="200"/>
-                            <ColumnDefinition Width="550"/>
-                            <ColumnDefinition Width="250"/>
+                            <ColumnDefinition Width="150"/>
+                            <ColumnDefinition Width="450"/>
+                            <ColumnDefinition Width="150"/>
                         </Grid.ColumnDefinitions>
-                        <Button Grid.Column="0" Name="Btn_Date" Height="26" Width="150" Content="FilterByDate" Click="Btn_Date_Click"/>
-                        <Button Grid.Column="1" Name="Btn_Event" Height="26" Width="150" Content="FilterByEvent" Click="Btn_Event_Click"/>
-                        <Button Grid.Column="2" Name="Btn_User" Height="26" Width="150" Content="FilterByUser" Click="Btn_User_Click"/>
+                        <Button Grid.Column="0" Name="Btn_Date" Height="26" Width="100" Content="FilterByDate" Click="Btn_Date_Click" HorizontalAlignment="Center"/>
+                        <Button Grid.Column="1" Name="Btn_Event" Height="26" Width="100" Content="FilterByEvent" Click="Btn_Event_Click"  HorizontalAlignment="Center"/>
+                        <Button Grid.Column="2" Name="Btn_User" Height="26" Width="100" Content="FilterByUser" Click="Btn_User_Click"  HorizontalAlignment="Center"/>
                     </Grid>
                 </StackPanel>
             </Grid>
@@ -95,7 +94,6 @@
                 </Grid.RowDefinitions>
                 <Button Grid.Column="0" Content="Reset" Height="26" Width="150" Name="BtnReset" Click="BtnReset_Click" Margin="10,0"/>
             </Grid>
-
         </StackPanel>
     </Grid>
 </Page>
